# CG_Proyecto2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
res/shaders/: minecube_fs.glsl  minecube_vs.glsl
src/: Block.cpp  Block.h  Camera.h  Chunk.h  GLWindow.cpp  GLWindow.h  Gui.h  PauseMenu.h  Player.cpp  Player.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShortRayCast.cpp  ShortRayCast.h  Texture.cpp  Texture.h  World.cpp  World.h  main.cpp  renderObjects.h  types.h
src/game/: Application.cpp  Application.h  Block.cpp  Block.h  Camera.h  Chunk.cpp  Chunk.h  Gui.cpp  Gui.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h  PlayerPhysics.cpp  PlayerPhysics.h  Scene.cpp  Scene.h  Time.cpp  Time.h  World.cpp  World.h
src/math/: ShortRayCast.cpp  ShortRayCast.h
src/rendering/: GLWindow.cpp  GLWindow.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
